travel.css
body{
	margin: 0 auto;
	background-color: grey;
	font-family: Arial;
}

nav {
	background-color: black;
	position: fixed;
	width: 100%;
	border-bottom: 2px solid darkgrey;
	top: 0px;
	z-index: 1;	
}


nav ul {
	list-style-type: none;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: wrap;
	flex: 1 1 auto;
	margin: 0 auto;
	padding: 0;
	height: 50px;
}

@media screen and (max-width: 500px){
	nav li {
		color: white;
		font-size: 14px;
	}
	
	button {
		background-color: rgb(72, 72, 72);
		padding: 8px 35px;
		margin-top: 20px;
		border: 0px solid black;
		border-radius: 5px;
	    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
	    transition: box-shadow 0.3s ease;
		margin-bottom: 30px;
		font-size: 18px;
	}
}


@media screen and (min-width: 501px) {
	nav li{
		color: white;
		font-size: 20px;
	}
	
	button {
		background-color: rgb(72, 72, 72);
		padding: 8px 75px;
		margin-top: 20px;
		border: 0px solid black;
		border-radius: 5px;
	    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
	    transition: box-shadow 0.3s ease;
		margin-bottom: 30px;
		font-size: 18px;
	}
}


nav li a {
	text-decoration: none;
	color: inherit;
	
}

nav li:hover {
	color: grey;
	cursor: pointer;
}

main{
	maring: 0 auto;
	position: relative;
	top: 80px;
	text-align: center;
}


@media screen and (max-width: 500px) {
	.container {
		display: grid;
		height: 100%;
		grid-template: 1fr 1fr 1fr 1fr 1fr 1fr/ 1fr;
		justify-content: space-around;
		row-gap: 15px;
		column-gap: 15px;
	}

}

@media screen and (min-width: 500px) {
	.container {
		display: grid;
		height: 100%;
		grid-template: 1fr 1fr 1fr / 1fr 1fr;
		justify-content: space-around;
		row-gap: 15px;
		column-gap: 15px;
	}
}

div {
	align-content: center;
	padding-left: 1%;
	padding-right: 1%;
}

img {
    width: 100%;       /* Fill the grid cell width */
    height: auto;      /* Maintain aspect ratio */
    object-fit: cover; /* Crop if needed without distortion */
    border-radius: 8px; /* Optional rounded corners */
    display: block;
}

.project-box{
	background-color: rgb(90, 90, 90);
	border-radius: 15px;
	padding-left: 3%;
	padding-right: 3%;
	padding-bottom: 5%;
}

.inner-project-box{
	background-color: rgb(58, 58, 58);
	color: rgb(205, 205, 205);
	border-radius: 15px;
	margin-left: 10%;
	margin-right: 10%;
	padding-bottom: 4%;
	padding-top: 4%;
	padding-left: 3%;
	padding-right: 3%;
}

.inner-project-box button:hover{
	color: lightgrey;
}

footer {
	background-color: black;
	color: white;
	position: relative;
	top: 140px;
	text-align: center;
	padding: 3px;
	font-size: 15px;
	border-top: 1px solid lightgrey;
	border-bottom: 1px solid lightgrey;
}

